[gd_scene load_steps=13 format=3 uid="uid://cnwjaor4y88uj"]

[ext_resource type="Script" path="res://GameManager.gd" id="1_u5bux"]
[ext_resource type="VideoStream" path="res://assets/Dream_2.ogv" id="1_ufql0"]
[ext_resource type="Texture2D" uid="uid://bo6rgr3vfgu71" path="res://assets/PlayButton.png" id="2_7oir7"]
[ext_resource type="Texture2D" uid="uid://bl60qjsyulbup" path="res://assets/PlayButtonHover.png" id="3_xxxqc"]
[ext_resource type="Script" path="res://TextureButton.gd" id="5_215qw"]
[ext_resource type="Script" path="res://Cancel.gd" id="6_goepl"]
[ext_resource type="Script" path="res://LoginTab.gd" id="6_xnvtr"]
[ext_resource type="Script" path="res://New user.gd" id="8_5r2uc"]

[sub_resource type="GDScript" id="GDScript_p6d1r"]
script/source = "extends VideoStreamPlayer


# Called when the node enters the scene tree for the first time.
func _ready():
	play()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="Theme" id="Theme_b247d"]

[sub_resource type="Animation" id="Animation_o0h83"]
resource_name = "ZoomLoginTab"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(453, 700), Vector2(453, 250)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pb227"]
_data = {
"ZoomLoginTab": SubResource("Animation_o0h83")
}

[node name="LoginScreen" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_u5bux")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="GameManager"]
offset_right = 1153.0
offset_bottom = 652.0
stream = ExtResource("1_ufql0")
autoplay = true
expand = true
loop = true
script = SubResource("GDScript_p6d1r")

[node name="TextureButton" type="TextureButton" parent="GameManager/VideoStreamPlayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -37.0
offset_right = 291.5
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.479999, 0.520001)
focus_mode = 0
texture_normal = ExtResource("2_7oir7")
texture_pressed = ExtResource("3_xxxqc")
texture_hover = ExtResource("2_7oir7")
script = ExtResource("5_215qw")

[node name="LoginTab" type="Panel" parent="GameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = 376.0
offset_right = 136.0
offset_bottom = 712.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_b247d")
script = ExtResource("6_xnvtr")

[node name="UsernameField" type="LineEdit" parent="GameManager/LoginTab"]
layout_mode = 0
offset_left = 45.0
offset_top = 56.0
offset_right = 197.0
offset_bottom = 98.0
placeholder_text = "Username"

[node name="PasswordField" type="LineEdit" parent="GameManager/LoginTab"]
offset_left = 45.0
offset_top = 142.0
offset_right = 197.0
offset_bottom = 184.0
placeholder_text = "Password"
secret = true

[node name="LoginAnimation" type="AnimationPlayer" parent="GameManager/LoginTab"]
libraries = {
"": SubResource("AnimationLibrary_pb227")
}

[node name="Cancel" type="Button" parent="GameManager/LoginTab"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -29.0
offset_top = 7.0
offset_right = -11.0
offset_bottom = 23.0
grow_horizontal = 0
script = ExtResource("6_goepl")

[node name="New user" type="TextureButton" parent="GameManager/LoginTab"]
layout_mode = 0
offset_left = 20.0
offset_top = 250.0
offset_right = 405.0
offset_bottom = 389.0
scale = Vector2(0.249953, 0.274566)
texture_normal = ExtResource("2_7oir7")
texture_pressed = ExtResource("3_xxxqc")
texture_hover = ExtResource("2_7oir7")
script = ExtResource("8_5r2uc")

[node name="Login" type="TextureButton" parent="GameManager/LoginTab"]
offset_left = 139.0
offset_top = 250.0
offset_right = 524.0
offset_bottom = 389.0
scale = Vector2(0.243864, 0.278389)
texture_normal = ExtResource("2_7oir7")
texture_pressed = ExtResource("3_xxxqc")
texture_hover = ExtResource("2_7oir7")

[node name="Label" type="Label" parent="GameManager"]
offset_left = 121.0
offset_top = 36.0
offset_right = 152.0
offset_bottom = 59.0
scale = Vector2(5.47354, 3.80124)
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="HTTPRequest" type="HTTPRequest" parent="GameManager"]

[connection signal="pressed" from="GameManager/LoginTab/New user" to="GameManager/LoginTab" method="_new_login"]
[connection signal="pressed" from="GameManager/LoginTab/Login" to="GameManager/LoginTab" method="_login"]
